--- a/package.json
+++ b/package.json
@@ -1,21 +1,39 @@
 {
-  "name": "@cisl/crun-discover",
-  "version": "2.0.1",
-  "dependencies": {
-    "request": "^2.88.0"
-  },
-  "deprecated": false,
-  "description": "Get details about running cogs on crun-server",
+  "name": "@cisl/cog-discover",
+  "version": "1.0.0-dev.1",
+  "description": "Get details about running cogs on cog-server",
   "license": "MIT",
-  "main": "discover.js",
+  "main": "dist/discover.js",
+  "types": "dist/discover.d.ts",
   "repository": {
     "type": "git",
-    "url": "http://internal.cisl.rpi.edu/code/libraries/crun-discover"
+    "url": "https://github.com/cislrpi/cog-discover"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "lint": "eslint src/*",
+    "test": "exit 0",
+    "prepublishOnly": "echo \"Do not run publish directly, run tsc-publish\" && exit 1",
+    "tsc-publish": "tsc-publish"
   },
   "publishConfig": {
-    "registry": "https://internal.cisl.rpi.edu/npm/"
+    "access": "public"
+  },
+  "engines": {
+    "node": ">=10"
+  },
+  "dependencies": {
+    "@cisl/cog-loader": "^1.0.0-dev.1",
+    "@types/node-fetch": "^2.5.7",
+    "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "@types/node": "^10.17.21",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "eslint": "^6.4.0",
+    "tsc-publish": "^0.5.2",
+    "typescript": "^3.8.3"
   }
 }
